# maeevick.zola

./: .gitignore  CNAME  CODEOWNERS  LICENSE  README.md  index.html  main.css  robots.txt  search_index.en.js  sitemap.xml
.github/workflows/: build_and_deploy.yaml  grimble-running_build_and_deploy.yaml
app/: config.toml
app/content/: _index.fr.md  _index.md
app/content/codex/: 2025-05-25_grimble-le-compilateur.fr.md  2025-05-25_grimble-le-compilateur.md  2025-05-25_trix-lexplosive.fr.md  2025-05-25_trix-lexplosive.md  _index.fr.md  _index.md
app/content/lab/: 2025-05-12_hello_trix.fr.md  2025-05-12_hello_trix.md  _index.fr.md  _index.md
app/content/quests/: 2025-05-20_grimble-running.fr.md  2025-05-20_grimble-running.md  _index.fr.md  _index.md
app/public/: search_index.en.js
app/sass/: _base.scss  _layout.scss  _variables.scss  main.scss
app/sass/components/: _article.scss  _cards.scss  _carousel.scss  _footer.scss  _header.scss  _intro.scss
app/templates/: base.html  index.html  page.html  section.html
codex/: index.html
codex/grimble-le-compilateur/: index.html
codex/trix-lexplosive/: index.html
fr/: index.html
fr/codex/: index.html
fr/lab/: index.html
fr/quests/: index.html
grimble-running/: Cargo.toml  Makefile  README.md  index.html
grimble-running/src/: game.rs  lib.rs  main.rs
lab/: index.html
lab/hello-trix/: index.html
quests/: index.html
quests/grimble-running/: index.html
trix-piping/: Cargo.toml  Makefile  README.md  index.html
trix-piping/.cargo/: config.toml
trix-piping/src/: game.rs  lib.rs
(+5 files in other folders)
