[package]
name = "grimble-running"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.16.1"
rand = "0.9.1"
wasm-bindgen = "0.2.100"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
getrandom = { version = "0.3.3", features= ["wasm_js"] }


######### BELOW BEVY ENGINE RECOMMANDATION ###########

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"                                                                                                                    

[profile.wasm-release]
inherits = "release"
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
